# life-cli

./: .gitignore  ARCH.md  CLAUDE.md  README.md  justfile  life-output.md  models.py  pyproject.toml  pyrightconfig.json
docs/: architecture.md  personas.md  roast.md
docs/personas/: README.md  kim.md  pepper.md  roast.md
life/: accounts.py  chat.py  cli.py  commands.py  config.py  dash.py  dashboard.py  dates.py  db.py  email.py  habits.py  health.py  improvements.py  interventions.py  items.py  loop.py  metrics.py  migrations.py  models.py  momentum.py  mood.py  patterns.py  search.py  signal.py  steward.py  tags.py  tasks.py
life/api/: __init__.py  backup.py  chat.py  checks.py  countdown.py  dashboard.py  dates.py  focus.py  habits.py  items.py  models.py  momentum.py  personas.py  tag.py  tags.py  tasks.py  utils.py
life/cli/: __init__.py  backup.py  chat.py  check.py  chore.py  context.py  countdown.py  dashboard.py  done.py  due.py  focus.py  habit.py  habits.py  items.py  kim.py  pepper.py  personas.py  profile.py  rename.py  rm.py  roast.py  tag.py  task.py
life/comms/: accounts.py  agent.py  audit.py  claude.py  config.py  daemon.py  db.py  digest.py  drafts.py  health.py  launchd.py  learning.py  models.py  policy.py  proposals.py  senders.py  services.py  snooze.py  templates.py  triage.py
life/lib/: ansi.py  backup.py  claude.py  clock.py  clusters.py  converters.py  dates.py  errors.py  format.py  fuzzy.py  match.py  parsing.py  render.py  resolve.py  spinner.py  tail.py
life/migrations/: 001_foundation.sql  002_canonical.sql  002_subtasks.sql  003_completed_datetime.sql  004_scheduled_time.sql  005_blocked_by.sql  006_task_mutations.sql  007_due_time.sql  008_interventions.sql  009_mutation_reason.sql  010_habit_archived_at.sql  011_deleted_tasks.sql  012_task_links.sql  013_task_links_created_at.sql  014_task_description.sql  015_tags_unique_partial_index.sql  016_checks_completed_at.sql  017_search_fts.sql  018_cancelled_tasks.sql  019_patterns.sql  020_steward_sessions.sql  021_steward_observations.sql  022_observation_tags.sql  023_mood_log.sql  024_task_source.sql  025_observation_about_date.sql  026_habit_subhabits_and_private.sql  027_pattern_tags.sql  028_scheduled_vs_deadline.sql  029_is_deadline.sql  030_special_dates.sql  (+6 more)
scripts/: install.sh  repair_db.py
tests/: conftest.py  test_sqlite.py  test_storage.py
(+144 files in other folders)
