[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "life"
version = "0.1.0"
description = "ADHD executive function rescue system"
authors = ["tyson <tyson.chan@proton.me>"]
readme = "README.md"
packages = [{include = "life", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = ">=8.0.0"

[tool.poetry.scripts]
life = "life.cli:main"
