[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "life"
version = "0.1.0"
description = "ADHD executive function rescue system"
authors = ["tyson <tyson.chan@proton.me>"]
readme = "README.md"
packages = [{include = "life", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.17.4"

[tool.poetry.scripts]
life = "life.cli:main_with_personas"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
pytest = "^8.4.1"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
]
ignore = [
    "SIM108",
    "SIM117",
    "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
