[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-cli"
version = "0.1.0"
description = "Life accountability CLI"
authors = [{name = "Tyson Chan", email = "tyson.chan@proton.me"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.17.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=8.4.1",
]

[project.scripts]
life = "life.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["life"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
]
ignore = [
    "SIM108",
    "SIM117",
    "E501",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
